完成webview，但有个比较神奇的是换了个地址就不行了

--- a/TDUICatalog/Base.lproj/Main.storyboard
+++ b/TDUICatalog/Base.lproj/Main.storyboard
@@ -445,6 +445,9 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="9MJ-m5-Y2n" kind="showDetail" id="vCv-K9-O9o"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" textLabel="mim-tF-xvf" style="IBUITableViewCellStyleDefault" id="vFv-Ge-pG3">
                                         <rect key="frame" x="0.0" y="768" width="600" height="44"/>
@@ -2172,6 +2175,70 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="56G-fq-iXC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-3489" y="-1352"/>
+        </scene>
+        <!--Web View-->
+        <scene sceneID="Yu2-em-AbA">
+            <objects>
+                <viewController id="hO1-Tt-wyt" customClass="TDWebViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="bT0-xF-LMY"/>
+                        <viewControllerLayoutGuide type="bottom" id="mxL-iV-wch"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="7vA-Iz-z1N">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="https://apple.com" borderStyle="line" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8ou-UL-6z9">
+                                <rect key="frame" x="47" y="84" width="506" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="VT0-oz-31s"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fc4-dz-qxx">
+                                <rect key="frame" x="0.0" y="122" width="600" height="478"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Fc4-dz-qxx" firstAttribute="leading" secondItem="7vA-Iz-z1N" secondAttribute="leading" id="CGh-Z0-56j"/>
+                            <constraint firstItem="mxL-iV-wch" firstAttribute="top" secondItem="Fc4-dz-qxx" secondAttribute="bottom" id="DG0-XU-Q36"/>
+                            <constraint firstItem="8ou-UL-6z9" firstAttribute="top" secondItem="bT0-xF-LMY" secondAttribute="bottom" constant="20" id="LQU-Zg-GvJ"/>
+                            <constraint firstItem="Fc4-dz-qxx" firstAttribute="top" secondItem="8ou-UL-6z9" secondAttribute="bottom" constant="8" id="Mwi-4N-JAi"/>
+                            <constraint firstAttribute="trailing" secondItem="8ou-UL-6z9" secondAttribute="trailing" constant="47" id="WXU-tp-YeR"/>
+                            <constraint firstItem="8ou-UL-6z9" firstAttribute="leading" secondItem="7vA-Iz-z1N" secondAttribute="leading" constant="47" id="lpL-VQ-sJe"/>
+                            <constraint firstAttribute="trailing" secondItem="Fc4-dz-qxx" secondAttribute="trailing" id="vsz-AU-AyG"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Web View" id="bht-WJ-rcu"/>
+                    <connections>
+                        <outlet property="addressTextField" destination="8ou-UL-6z9" id="Ewn-UZ-Wp7"/>
+                        <outlet property="webView" destination="Fc4-dz-qxx" id="TI3-G5-O2S"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Bj8-9a-L0y" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2771" y="-691"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="e3T-mL-ZMr">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="9MJ-m5-Y2n" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="1A6-Qc-8sc">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="hO1-Tt-wyt" kind="relationship" relationship="rootViewController" id="H6h-zP-sH1"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xMA-n2-DIw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-3489" y="-691"/>
         </scene>
     </scenes>
 </document>
