--- a/TDUICatalog/Search.storyboard
+++ b/TDUICatalog/Search.storyboard
@@ -375,7 +375,7 @@
         <!--Custom Search Bar-->
         <scene sceneID="JX5-UQ-dDK">
             <objects>
-                <viewController id="JqM-QU-Mfp" sceneMemberID="viewController">
+                <viewController id="JqM-QU-Mfp" customClass="TDCustomSearchBarViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="wBz-ru-cGW"/>
                         <viewControllerLayoutGuide type="bottom" id="3gC-Hm-P2H"/>
@@ -400,6 +400,9 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Custom Search Bar" id="iMq-nz-qzp"/>
+                    <connections>
+                        <outlet property="searchBar" destination="du8-sM-2nv" id="6WM-B3-76X"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SUp-Hw-gBG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
