终于知道怎么连接Search的storyboard了，原来可以添加一个sb reference。成功跳转后报了个错，Main.storyboard references the initial view controller of Search.storyboard, but no designated entry point was found.。后来发现原来是Search的sb里没有设置初始化控制器。现在已经可以跳转了，终于可以试search的效果，发现还有很多bug，稍后修..

--- a/TDUICatalog/Base.lproj/Main.storyboard
+++ b/TDUICatalog/Base.lproj/Main.storyboard
@@ -465,6 +465,9 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="Wi8-15-wfI" kind="showDetail" id="Zoq-Zg-eq1"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" textLabel="MUQ-iW-6m8" style="IBUITableViewCellStyleDefault" id="fgn-7V-7T9">
                                         <rect key="frame" x="0.0" y="812" width="600" height="44"/>
@@ -2103,6 +2106,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6GD-xF-s2b" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-2359" y="448"/>
+        </scene>
+        <!--Search-->
+        <scene sceneID="NjJ-AW-NYy">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Search" id="Wi8-15-wfI" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="A1f-AH-XIt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-4434.5" y="-388"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="dvs-Zb-sYG">
